fix: correct smallcard alignment

--- a/week6/css/relative-travel.css
+++ b/week6/css/relative-travel.css
@@ -59,10 +59,10 @@
     border: 1px solid rgb(220, 220, 220);
     border-radius: 15px;
     background-color: white;
-    width: 70%;
+    width: 60%;
     position: absolute;
     right: -80px;
-    bottom: -40px;
+    bottom: 55px;
     padding: 15px 15px;
 }
 
